kustomize/kubernetes-dashboard/kube-system-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8sfin-kubernetes-dashboard
  namespace: kube-system
