kustomize/kubernetes-dashboard/kube-system-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sfin-kubernetes-dashboard
  namespace: kube-system
