kustomize/kubernetes-dashboard/traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8sfin-kubernetes-dashboard
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
